feat - alterações em tratamento de erros